--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
             android:gravity="center"
             android:text="0"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textSize="48sp" />
+            android:textSize="48sp"
+            android:layout_marginTop="-80sp"/>
 
         <Button
             android:id="@+id/ButtonUp"
@@ -33,8 +34,16 @@
             android:id="@+id/buttonDown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onsuccessbutton"
+            android:onClick="onButtonDownClicked"
             android:text="DOWN" />
+
+        <Button
+            android:id="@+id/reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:onClick="resetCounter"
+            android:text="resert counter" />
 
         <EditText
             android:id="@+id/plainTextName"
