--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,9 +12,23 @@
         android:id="@+id/layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:background="@drawable/running_abstract">
+        android:background="@drawable/running_abstract"
+        android:gravity="center|top"
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="start"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="250sp" />
 
         <TextView
             android:id="@+id/Counter"
@@ -20,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="-80sp"
             android:background="?colorSecondary"
-            android:clickable="true"
+            android:clickable="false"
             android:gravity="center"
             android:onClick="counterClick"
             android:text="0"
@@ -54,12 +70,13 @@
             android:id="@+id/plainTextName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?colorSecondary"
             android:ems="10"
             android:gravity="center"
             android:inputType="text"
             android:text="Gabrijel"
-            android:textSize="48sp"
-            android:background="?colorSecondary"
-            android:textColor="?colorOnSecondary"/>
+            android:textColor="?colorOnSecondary"
+            android:textSize="48sp" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
