--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
     android:id="@+id/restore_counter"
-    android:title="Resetiraj"
+    android:title="@string/reset"
     android:icon="@drawable/baseline_autorenew_24"
     app:showAsAction="ifRoom"/>
     <item
     android:id="@+id/croatian"
-    android:title="Hrvatski" />
+    android:title="@string/croatian" />
     <item
     android:id="@+id/english"
-    android:title="Engleski" />
+    android:title="@string/english" />
     </menu>
