--- a/app/src/main/res/menu/menu_float.xml
+++ b/app/src/main/res/menu/menu_float.xml
@@ -5,5 +5,5 @@
     <item
         android:id="@+id/couterReset"
         android:onClick="resetCounter"
-        android:title="reset counter" />
+        android:title="@string/reset_counter"/>
 </menu>
