--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,9 @@
     <item
     android:id="@+id/english"
     android:title="@string/english" />
+    <item
+        android:id="@+id/analytics"
+        android:title="analytics"
+        android:icon="@drawable/baseline_android_24"
+        app:showAsAction="ifRoom"/>
     </menu>
